# mikraytrace

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  actors.cpp  actors.h  babel.cpp  babel.h  bluemol.toml  camera.cpp  camera.h  common.h  config.cpp  config.h  light.cpp  light.h  main.cpp  mappers.cpp  mappers.h  pixel.h  renderer.cpp  renderer.h  scene.toml  scene2.toml  scene3.toml  texture.cpp  texture.h  trp.mol2  world.cpp  world.h
src/: CMakeLists.txt  actors.cpp  actors.h  babel.cpp  babel.h  camera.cpp  common.h  config.cpp  config.h  factory.cpp  factory.h  light.cpp  light.h  logger.cpp  logger.h  main.cpp  mappers.cpp  mappers.h  renderer.cpp  renderer.h  slider.cpp  slider.h  texture.cpp  texture.h  world.cpp  writer.cpp  writer.h
src/actors/: CMakeLists.txt  banner.cpp  banner.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  mesh.cpp  mesh.h  molecule.cpp  molecule.h  plane.cpp  plane.h  polygon.cpp  polygon.h  sphere.cpp  sphere.h  tools.cpp  tools.h  triangle.cpp  triangle.h
textures/: gettex.sh
